# GeorgeLink

./: .gitignore  Cargo.toml  notes.md  t
client/: Cargo.toml
client/src/: frontend.rs  main.rs
common/: Cargo.toml
linkproto/: Cargo.toml
linkproto/src/: client.rs  lib.rs  server.rs
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  common.rs  console.rs  cursive_gui.rs  frontend.rs  keygen.rs  main.rs  server.rs
src/Backend/: Cargo.toml
src/Backend/src/: lib.rs
src/assets/: style.toml
