[package]
name = "george_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
clap = {version="3.0.14", features=["cargo"]}
rustls = {version="0.20.2", features=["dangerous_configuration"]}
rustls-pemfile = "0.2.1"
colored = "2.0.0"
rcgen = "0.9.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
mio = { version = "0.8", features = ["net", "os-poll"] }

# client interface dependencies
cursive = {version="0.17", default-features=false, features=["crossterm-backend", "toml"]}
fltk = "1.2.29"


[features]
default = ["server"]
server = []
client = []
#fltk-client = ["client"]
console-client = ["client"]
