[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkproto = {path="../linkproto"}
common = {path="../common"}

# client interface dependencies
cursive = {version="0.17", default-features=false, features=["crossterm-backend", "toml"]}
fltk = "1.2.29"